
  CHANGES SINCE 1.0
=====================

Added --reindex option to DebugCompare
Added LinkFileWriter
Turned Property into an interface
Added setDoInference to InMemoryLinkDatabase
Changed TestFileListener to use link inference
Rewrote TestFileListener to use more Duke utilities
Added active learning script