@@ -1,5 +1,7 @@
 
-package no.priv.garshol.duke;
+package no.priv.garshol.duke.datasources;
+
+import no.priv.garshol.duke.Cleaner;
 
 public class Column {
   private String name;
