@@ -13,12 +13,12 @@ import static junit.framework.Assert.assertFalse;
 import static junit.framework.Assert.assertEquals;
 import static junit.framework.Assert.fail;
 
-import no.priv.garshol.duke.Column;
 import no.priv.garshol.duke.Record;
 import no.priv.garshol.duke.RecordIterator;
 import no.priv.garshol.duke.utils.JDBCUtils;
 import no.priv.garshol.duke.cleaners.RegexpCleaner;
 import no.priv.garshol.duke.cleaners.LowerCaseNormalizeCleaner;
+import no.priv.garshol.duke.datasources.Column;
 import no.priv.garshol.duke.datasources.JDBCDataSource;
 
 public class JDBCDataSourceTest {
